Fix flicker on scroll of chat on back-face of polaroid

--- a/public/stylesheets/friskyfactory/postings/polaroid.css
+++ b/public/stylesheets/friskyfactory/postings/polaroid.css
@@ -38,6 +38,10 @@
 	-webkit-backface-visibility: hidden;    
 }
 
+.polaroid-container > div.polaroid .front.face {
+	-webkit-transform: rotateY(180deg);
+}
+
 div.polaroid {
 	height: 350px;
 	width: 290px; 
